app-config/board-app-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: board-application
spec:
  host: board-application.apps.cluster1.mtp.local
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: board-application
    weight: 100
  wildcardPolicy: None
